Fix overlapping of main hero title with image on mobiles

--- a/src/components/templates/hero-section/hero-section.css
+++ b/src/components/templates/hero-section/hero-section.css
@@ -22,8 +22,8 @@
 @media (max-width: 600px) {
 	.hero-title {
 		font-size: 2rem;
-		width: 100%;
-		margin-left: -5rem;
+		width: 80%;
+		margin-left: 1rem;
 	}
 }
 
